Fix z-index of page header

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ h1 {
 
 #page-header {
   top: 0;
+  z-index: 2;
 }
 
 #page-footer {
